--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -41,6 +41,11 @@ h4 {
 
 a {
   text-decoration: none;
+  color: rgba(255, 255, 255, 0.87);
+}
+
+button {
+  color: rgba(255, 255, 255, 0.87);
 }
 
 li,
